# AudioDriver

./: .gitignore  CMakeLists.txt
doc/: DRCompressor_Design.md  FEC_Network_Design.md  clock_drift_compensation.md  design.md  network_receive.md
example/: CMakeLists.txt  main.cpp
include/: audio_interface.h  audio_interface_c.h  audio_message.h  audio_remote_interface.h
source/: audio_center.cpp  audio_config.cpp  audio_config.h  audio_dataview.h  audio_device_monitor.cpp  audio_device_monitor.h  audio_driver.cpp  audio_driver.h  audio_filterbanks.cpp  audio_filterbanks.h  audio_frame.cpp  audio_frame.h  audio_interface_c.cpp  audio_monitor.cpp  audio_monitor.h  audio_network.cpp  audio_network.h  audio_process.cpp  audio_process.h  audio_rpc.cpp  audio_rpc.h  audio_stream.cpp  audio_stream.h  audio_wavfile.cpp  audio_wavfile.h
source/bt/: bluetooth_agent.cpp  bluetooth_agent.h
source/ns/: estimator.cpp  estimator.h  fft4g.cpp  fft4g.h  noise_supression.cpp  noise_supression.h  ns_define.h  wiener_filter.cpp  wiener_filter.h
source/utils/: approx_operations.cpp  approx_opers.cpp  approx_opers.h  array_view.h  filter_banks.cpp  filter_banks.h
test/: CMakeLists.txt  analyze_resampling.py  bluetooth_main.cpp  config.txt  test_audio_process.cpp  test_dr_compressor.cpp  test_encoder.cpp  test_filter_banks.cpp  test_histogram.cpp  test_lms_filter.cpp  test_locsampler.cpp  test_magic_encoding.cpp  test_network.cpp  test_noise_suppression.cpp  test_pi_controller.cpp  test_player.cpp  test_remote_debug.cpp  test_rpc.cpp  test_rpc_priority.cpp  udp_forwarder_test.cpp
tools/: analyze_filter_quality.py  analyze_resampling.py  visualize_compressor.py
