include_directories("${CMAKE_SOURCE_DIR}/source")

add_executable(test_network test_network.cpp)
target_link_libraries(test_network bettyaudio)

add_executable(test_player test_player.cpp)
target_link_libraries(test_player bettyaudio)

add_executable(test_audio_process test_audio_process.cpp)
target_link_libraries(test_audio_process bettyaudio)

add_executable(test_locsampler test_locsampler.cpp)
target_link_libraries(test_locsampler bettyaudio)

add_executable(test_lms_filter test_lms_filter.cpp)
target_link_libraries(test_lms_filter bettyaudio)

add_executable(test_magic_encoding test_magic_encoding.cpp)
target_link_libraries(test_magic_encoding bettyaudio)

add_executable(test_histogram test_histogram.cpp)
target_link_libraries(test_histogram bettyaudio)

add_executable(test_pi_controller test_pi_controller.cpp)
target_link_libraries(test_pi_controller bettyaudio)